@@ -834,6 +834,19 @@ The message you want to be diplayed.
 
 =head1 Utilities
 
+
+=head2 wing.get_query_param(name, [url])
+
+Returns the value of a query param.
+
+=head3 name
+
+The name of the parameter you wish to fetch.
+
+=head3 url
+
+Optional. Defaults to C<window.location.href>.
+
 =head2 wing.parse_date(input, timezone)
 
 Takes any number of date-looking inputs, and converts them into a Moment.js object.
